--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  border: 1px solid white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container::before {
+  content: "";
+  width: 1px;
+  background-color: white;
+  height: 100%;
+  /* transform: translateX(50%); */
+  position: absolute;
+  left: calc(50% - 0.5px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container::after {
+  content: "";
+  height: 1px;
+  background-color: white;
+  width: 100%;
+  /* transform: translateX(50%); */
+  position: absolute;
+  top: calc(50% - 0.5px);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circles {
+  height: 400px;
+  width: 400px;
+  border: 2px solid white;
+  border-radius: 50%;
+  position: absolute;
+  /* left: calc(50% - 200px);
+  top: calc(50% - 200px); */
+  transform: translate(calc(50vw - 200px), calc(50vh - 200px));
 }
